# autobahn-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  LICENSE.md  Makefile  README.md  SConstruct  autobahncpp.sublime.project  conanfile.py  conanfile.txt  server.py  unserialize.py  vcpkg.json
.github/workflows/: build_and_test.yml  ci-linux.yaml  ci-windows.yaml  ci.yaml  hosted-pure-workflow.yml
autobahn/: autobahn.hpp  autobahn.ipp  autobahn_impl.hpp  boost_config.hpp  exceptions.hpp  wamp_arguments.hpp  wamp_async.hpp  wamp_async.ipp  wamp_auth_utils.hpp  wamp_authenticate.hpp  wamp_authenticate.ipp  wamp_call.hpp  wamp_call.ipp  wamp_call_options.hpp  wamp_call_options.ipp  wamp_call_result.hpp  wamp_call_result.ipp  wamp_challenge.hpp  wamp_challenge.ipp  wamp_component.hpp  wamp_component.ipp  wamp_endpoints.hpp  wamp_event.hpp  wamp_event.ipp  wamp_event_context.hpp  wamp_event_context.ipp  wamp_event_handler.hpp  wamp_invocation.hpp  wamp_invocation.ipp  wamp_invocation_context.hpp  wamp_invocation_context.ipp  wamp_invocation_result.hpp  wamp_invocation_result.ipp  wamp_message.hpp  wamp_message.ipp  wamp_message_type.hpp  wamp_message_type.ipp  wamp_network_component.hpp  wamp_network_component.ipp  wamp_network_transport.hpp  (+39 more)
cmake/Includes/: CMakeLists.txt
cmake/Modules/: FindBotan2.cmake  FindLibmsgpack.cmake  FindMsgpack.cmake  FindWebsocketpp.cmake
doc/: .gitignore  Doxyfile  Makefile  README.md  SConstruct  building.rst  conf.py  contents.rst  examples.md  examples.rst  gettingstarted.md  gettingstarted.rst  index.rst  reference.md  reference.rst  serve.py  table_of_contents.rst
doc/_static/css/: local.css
doc/_templates/: layout.html  side-primary.html  side-secondary.html
docker/: Dockerfile.clang  Dockerfile.gcc  Makefile  removeall.sh  versions.sh
docker/aarch64/: Dockerfile.clang  Dockerfile.gcc  Makefile  README.md
docker/armhf/: Dockerfile.clang  Dockerfile.gcc  Makefile  build_scons  example1.patch
docker/x86_64/: Dockerfile.clang  Dockerfile.gcc  Makefile
examples/: CMakeLists.txt  README.md  SConscript  SConstruct  call1.cpp  call1_uds.cpp  call2.cpp  call3.cpp  callee-ssl.cpp  callee.cpp  callee_new.cpp  caller.cpp  cryptosign-botan.cpp  cryptosign-openssl.cpp  index.html  parameters.cpp  parameters.hpp  provide_prefix.cpp  publish1.cpp  publish2.cpp  publish3.cpp  publisher.cpp  register1.cpp  register1_cb.cpp  register2.cpp  server.py  stdio.cpp  subscribe1.cpp  subscriber.cpp  subscriber_wampcra.cpp  uds.cpp  unsubscribe1.cpp  wampcra.cpp  websocket_callee.cpp
examples/.crossbar/: config.json  config_win.json  key.priv  key.pub
examples/.crossbar/ssl/: dhparam  server.crt
examples/browser/: index.html
examples/components/: CMakeLists.txt  callee.cpp  caller.cpp  publisher.cpp  subscriber.cpp
examples/projects/VS2015/: autobahn-cpp-examples.vs2015.sln  autobahn-cpp.vcxproj  callee.vcxproj  caller.vcxproj  provide_prefix.vcxproj  publisher.vcxproj  subscriber.vcxproj  wampcra.vcxproj  websocket.vcxproj
examples/sessions/: CMakeLists.txt  callee.cpp  caller.cpp  publisher.cpp  subscriber.cpp
examples/web/: index.html
include/: autobahn.hpp  autobahn.ipp
src/: SConscript  autobahn.cpp
test/: CMakeLists.txt  Makefile  SConscript  publish.cpp  rawunser.py  run_test.sh  serialize.py  test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test16.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test7b.cpp  test7c.cpp  test7d.cpp  test8.cpp  test_asio.cpp  test_future_with_asio.cpp  test_when_all.cpp  unserialize.py  wamp_test.hpp
test/auth/: auth.cpp
test/auth/crossbar/.crossbar/: config.json
test/calls/: calls.cpp
test/calls/crossbar/: backend.py
test/calls/crossbar/.crossbar/: config.json
test/pubsub/: pubsub.cpp
test/pubsub/crossbar/: backend.py
test/pubsub/crossbar/.crossbar/: config.json
